--- a/gulp-maxgraph/app/index.html
+++ b/gulp-maxgraph/app/index.html
@@ -31,6 +31,9 @@
                <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
             </ul>
          </nav>
+         <button class="burger btn-reset">
+          <span class="burger__line"></span>
+         </button>
          <div class="cart header__cart">
             <button class="btn-reset cart__btn">
                <svg>
@@ -55,9 +58,10 @@
          Мы продаем кроссовки брендов Nike, Adidas, Puma, Reebok, Converse и многие другие по низким
          ценам
       </p>
-      <button class="btn-reset btn btn--primary js-move-to">Перейти к покупкам</button>
+      <button class="hero__btn btn-reset btn btn--primary js-move-to">Перейти к покупкам</button>
    </div>
 </section>
+
          <section class="catalog">
   <div class="container catalog__container">
     <h2 class="title catalog__title">Каталог</h2>
@@ -284,12 +288,12 @@
                   </span>
                </span>
             </h3>
-            <a href="tel:" class="contacts__phone">+7 (800-78) 9-89-89</a>
+            <a href="tel:" class="contacts__phone">+7 923 789-19-89</a>
             <span class="contacts__address">г. Санкт-Петербург, Комсомольская, 43 к1</span>
          </div>
          <div class="contacts__item">
             <h3 class="contacts__subtitle">Главный офис</h3>
-            <a href="tel:" class="contacts__phone">+7 (800-78) 9-89-89</a>
+            <a href="tel:" class="contacts__phone">+7 923 789-19-89</a>
             <span class="contacts__address">г. Санкт-Петербург, Комсомольская, 43 к1</span>
          </div>
          <ul class="social list-reset">
@@ -302,6 +306,7 @@
       <div class="contacts__map" id="map"></div>
    </div>
 </section>
+
          <section class="instagram">
    <h2 class="visually-hidden">Форма и инстаграм-лента</h2>
    <div class="container instagram__container">
